# ofd

./: .gitignore  Pipfile  ofd_class.py  ofd_parser.py  ofdlib.py  pyproject.toml  reader.py  readme.md  test.py
lib/: action.py  annotion.py  attachment.py  bookmark.py  classes.py  clip.py  color.py  document.py  dom.py  draw.py  extension.py  font.py  graph.py  image.py  model.py  ofd.py  outline.py  page.py  permission.py  res.py  signature.py  st.py  text.py  util.py  v_preference.py  version.py  zip.py
tests/: test_CT_Path.py  test_ColorRGB.py  test_dc.py  test_doc.py  test_document.py  test_document_res.py  test_et.py  test_model.py  test_ofd.py  test_page.py  test_reader.py
tests/files/: test3.ofd  test4.ofd
tests/files/test3_unzip_files/: OFD.xml  test3_modify.ofd
tests/files/test3_unzip_files/Doc_0/: Document.xml  DocumentRes.xml  DocumentRes_1.xml  Document_1.xml  PublicRes.xml
tests/files/test3_unzip_files/Doc_0/Annots/: Annotations_1.xml
tests/files/test3_unzip_files/Doc_0/Annots/Page_0/: Annotation_1.xml
tests/files/test3_unzip_files/Doc_0/Pages/Page_0/: Content.xml
tests/files/test3_unzip_files/Doc_0/Signs/: Signatures.xml
tests/files/test3_unzip_files/Doc_0/Signs/Sign_0/: Signature.xml
tests/files/test3_unzip_files/Doc_0/Signs/Sign_1/: Signature.xml
tests/files/test3_unzip_files/Doc_0/Versions/: Version.xml  Version_1.xml
tests/files/test4_unzip_files/: OFD.xml
tests/files/test4_unzip_files/Doc_0/: Document.xml  DocumentRes.xml  PublicRes.xml
tests/files/test4_unzip_files/Doc_0/Tags/: CustomTags.xml  Tag_OfficeDoc.xml
(+11 files in other folders)
